--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon index.js"
   },
-  "author": "Sanket Singh",
+  "author": "Mohit Bhatt",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
