--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a backend API application for Movie Booking, similar to BMS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests implemented\"",
     "start": "npx nodemon index.js"
   },
   "author": "Mohit Bhatt",
